--- a/Runned/Launch.csproj
+++ b/Runned/Launch.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{89C82BAC-DF99-49EF-B37F-9063E2AFA085}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Runned</RootNamespace>
-    <AssemblyName>Runned</AssemblyName>
+    <RootNamespace>Launch</RootNamespace>
+    <AssemblyName>Launch</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
